Alpha version, without the aggregates and unit tests